# excel-simulation

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  build.sh  cell.cpp  cell.h  comma.txt  configure.sh  excel.cpp  excel.h  main.cpp  run.sh  string.cpp  string.h  terminal.cpp  terminal.h  test.txt  textfile.txt  vector.cpp  vector.h
data/: example.txt  example2.txt  formula.txt  test.txt  testcopy.txt  textfile.txt
debug/: excel
include/: cell.h  excel.h  excelManager.h  formulaType.h  terminal.h  utility.h  validator.h  vector.h
src/: cell.cpp  excel.cpp  excelManager.cpp  main.cpp  terminal.cpp  utility.cpp  validator.cpp  vector.cpp
